fix: Fix z-index of dropdown components (#1282)

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@
   --ods-dialog-content-z-index: 30;
   --ods-dialog-alert-content-z-index: 30;
 
-  --ods-dropdown-content-z-index: 40;
+  --ods-dropdown-container-content-z-index: 40;
 }
